--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,7 +135,7 @@ SphereComponent=SphereComponent.Collision.Collision,
 TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Mannequin/Character/Mesh
+ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -160,7 +160,8 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/AIAgent/TestActor1.TestActor1
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -585,6 +586,11 @@ FbxExportOption.Exporter=True
 FbxExportOption.Mesh=True
 FbxExportOption.StaticMesh=True
 FbxExportOption.Animation=True
+TestActor1_C.Tick=True
+TestActor1_C.Rendering=True
+TestActor1_C.Replication=True
+TestActor1_C.Input=True
+TestActor1_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
