Working on test branch
branch 1 testing

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -160,8 +160,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/AIAgent/TestActor1.TestActor1
+CleanShutdown=False
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
