added interface folder + player interface

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -73,8 +73,8 @@ CurrentPosGridSize=1
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Levels/BlockOut
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Levels/BlockOut
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,
@@ -163,10 +163,11 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Levels/BlockOut
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -709,6 +710,11 @@ StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Cooking=True
 StaticMeshComponent.Events=True
 GrassMesh_C.TransformCommon=True
+PlayerController_C.Tick=True
+PlayerController_C.Rendering=True
+PlayerController_C.Replication=True
+PlayerController_C.Input=True
+PlayerController_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -726,6 +732,10 @@ GrassMesh_C.TransformCommon=True
 /Game/Materials/Blue.Blue=0
 /Game/Geometry/Meshes/GrassMesh.GrassMesh=0
 /Game/Geometry/Meshes/Grass.Grass=0
+/Game/TopDownBP/Blueprints/I_Detect.I_Detect=1
+/Game/TopDownBP/Blueprints/TopDownController.TopDownController=1
+/Game/TopDownBP/Interfaces/PlayerInt.PlayerInt=1
+/Game/TopDownBP/Blueprints/PlayerController.PlayerController=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
