--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -139,7 +139,7 @@ TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -166,7 +166,9 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDownBP/Interfaces/PlayerInt.PlayerInt
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/PlayerController.PlayerController
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
@@ -715,6 +717,16 @@ PlayerController_C.Rendering=True
 PlayerController_C.Replication=True
 PlayerController_C.Input=True
 PlayerController_C.Actor=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+K2Node_Message.Graph=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -777,7 +789,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
