--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,6 +50,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@TONY-PC
 LastExecutedLaunchName=TONY-PC
 LastExecutedPIEPreviewDevice=
+NewWindowPosition=(X=315,Y=143)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -137,6 +138,7 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.Ac
 SphereComponent=SphereComponent.Collision.Collision,
 TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
@@ -725,6 +727,15 @@ K2Node_InputKey.Modifier=True
 K2Node_Message.Graph=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+PlayerControl_C.PlayerController=True
+PlayerControl_C.Tick=True
+PlayerControl_C.Cheat Manager=True
+PlayerControl_C.MouseInterface=True
+PlayerControl_C.Game=True
+PlayerControl_C.Controller=True
+PlayerControl_C.Replication=True
+PlayerControl_C.Input=True
+PlayerControl_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
