--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -140,6 +140,10 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=AIbot_C.Collision.Collision,
 K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
+StructProperty=TopDownCharacter_C.Collision.Collision,
+K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,
+BoolProperty=TopDownCharacter_C.Collision.Collision,
+FloatProperty=TopDownCharacter_C.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
@@ -169,10 +173,9 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/AIAgent/MOveToTarget.MoveToTarget
+CleanShutdown=False
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/PlayerControl.PlayerControl
+OpenAssetsAtExit=/Game/TopDownBP/TargetDummy/TargetDummy.TargetDummy
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -920,6 +923,46 @@ ArrowComponent.Tags=True
 ArrowComponent.ComponentReplication=True
 ArrowComponent.Cooking=True
 ArrowComponent.Events=True
+TargetDummy_C.TransformCommon=True
+TargetDummy_C.Rendering=True
+TargetDummy_C.Input=True
+TargetDummy_C.Actor=True
+TargetDummy_C.Tick=True
+TargetDummy_C.Default=True
+TargetDummy_C.Replication=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+K2Node_MakeStruct.PinOptions=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -942,6 +985,7 @@ ArrowComponent.Events=True
 /Game/TopDownBP/Interfaces/PlayerInt.PlayerInt=1
 /Game/TopDownBP/Blueprints/PlayerController.PlayerController=1
 /Game/AIAgent/ProtoTree.ProtoTree=0
+/Game/TopDownBP/TargetDummy/TargetDummy.TargetDummy=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -950,7 +994,7 @@ InstalledPlugins=Substance
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+ShapeComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
@@ -1633,6 +1677,7 @@ LastLogListing=LoadErrors
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/TopDownBP/TargetDummy/TargetDummy.TargetDummy;
 RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
 RecentlyPlaced=/Game/Geometry/Meshes/GrassMesh.GrassMesh;
 RecentlyPlaced=/Game/Geometry/Meshes/Grass.Grass;
