--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -142,7 +142,7 @@ K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/GW000979/DataStruct
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -170,9 +170,6 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/AIAgent/MOveToTarget.MoveToTarget
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/PlayerControl.PlayerControl
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -920,6 +917,24 @@ ArrowComponent.Tags=True
 ArrowComponent.ComponentReplication=True
 ArrowComponent.Cooking=True
 ArrowComponent.Events=True
+BaseWeapon_C.Tick=True
+BaseWeapon_C.Default=True
+BaseWeapon_C.Rendering=True
+BaseWeapon_C.Replication=True
+BaseWeapon_C.Input=True
+BaseWeapon_C.Actor=True
+UserDefinedStruct.Structure=True
+UserDefinedStruct.DefaultValues=True
+BaseWeapon_C.TransformCommon=True
+Weapon_Struct.None=True
+Generic.None=True
+Armour_Struct.None=True
+TestDrop_C.Tick=True
+TestDrop_C.Default=True
+TestDrop_C.Rendering=True
+TestDrop_C.Replication=True
+TestDrop_C.Input=True
+TestDrop_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -942,6 +957,12 @@ ArrowComponent.Events=True
 /Game/TopDownBP/Interfaces/PlayerInt.PlayerInt=1
 /Game/TopDownBP/Blueprints/PlayerController.PlayerController=1
 /Game/AIAgent/ProtoTree.ProtoTree=0
+/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon=1
+/Game/GW000979/DataStruct/Armour_Struct.Armour_Struct=1
+/Game/GW000979/DataStruct/Weapon_Struct.Weapon_Struct=1
+/Game/GW000979/DataStruct/WeaponDataTable.WeaponDataTable=1
+/Game/GW000979/DataStruct/ArmourDataTable.ArmourDataTable=1
+/Game/GW000979/DataStruct/TargetDummy/TestDrop.TestDrop=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -983,7 +1004,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -1585,6 +1606,8 @@ ClothingSystemEditorInterface.TimeStamp=2018.09.07-09.34.18
 ClothingSystemEditorInterface.LastCompileMethod=Unknown
 NewLevelDialog.TimeStamp=2018.06.09-14.06.59
 NewLevelDialog.LastCompileMethod=Unknown
+DataTableEditor.TimeStamp=2018.05.14-10.37.16
+DataTableEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1633,6 +1656,7 @@ LastLogListing=LoadErrors
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon;
 RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
 RecentlyPlaced=/Game/Geometry/Meshes/GrassMesh.GrassMesh;
 RecentlyPlaced=/Game/Geometry/Meshes/Grass.Grass;
