--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -138,11 +138,11 @@ SphereComponent=SphereComponent.Collision.Collision,
 TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=AIbot_C.Collision.Collision,
-K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,
+K2Node_VariableGet=
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/TargetDummy
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -170,9 +170,6 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/AIAgent/MOveToTarget.MoveToTarget
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/PlayerControl.PlayerControl
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -920,6 +917,57 @@ ArrowComponent.Tags=True
 ArrowComponent.ComponentReplication=True
 ArrowComponent.Cooking=True
 ArrowComponent.Events=True
+TargetDummy_C.TransformCommon=True
+TargetDummy_C.Rendering=True
+TargetDummy_C.Input=True
+TargetDummy_C.Actor=True
+TargetDummy_C.Tick=True
+TargetDummy_C.Default=True
+TargetDummy_C.Replication=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+DamageText_C.Appearance=True
+DamageText_C.Designer=True
+DamageText_C.Input=True
+DamageText_C.Interaction=True
+DamageText_C.Layout=True
+DamageText_C.Behavior=True
+DamageText_C.Render Transform=True
+DamageText_C.Performance=True
+DamageText_C.Clipping=True
+DamageText_C.Navigation=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+SizeBox.Child Layout=True
+SizeBox.Behavior=True
+SizeBox.Render Transform=True
+SizeBox.Performance=True
+SizeBox.Clipping=True
+SizeBox.Navigation=True
+DamageText_C.Default=True
+WidgetInteractionComponent.Variable=True
+WidgetInteractionComponent.TransformCommon=True
+WidgetInteractionComponent.Sockets=True
+WidgetInteractionComponent.Interaction=True
+WidgetInteractionComponent.Debugging=True
+WidgetInteractionComponent.Rendering=True
+WidgetInteractionComponent.Tags=True
+WidgetInteractionComponent.ComponentReplication=True
+WidgetInteractionComponent.Activation=True
+WidgetInteractionComponent.Cooking=True
+WidgetInteractionComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -942,13 +990,14 @@ ArrowComponent.Events=True
 /Game/TopDownBP/Interfaces/PlayerInt.PlayerInt=1
 /Game/TopDownBP/Blueprints/PlayerController.PlayerController=1
 /Game/AIAgent/ProtoTree.ProtoTree=0
+/Game/TopDownBP/TargetDummy/DamageText.DamageText=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Render Transform.RenderTransform\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 PrimitiveComponent=
@@ -960,6 +1009,15 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+SizeBox="\"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Render Transform.RenderTransform\" "
+DamageText_C="\"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object.Render Transform.RenderTransform\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -983,7 +1041,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -1585,6 +1643,8 @@ ClothingSystemEditorInterface.TimeStamp=2018.09.07-09.34.18
 ClothingSystemEditorInterface.LastCompileMethod=Unknown
 NewLevelDialog.TimeStamp=2018.06.09-14.06.59
 NewLevelDialog.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2018.05.14-10.37.26
+SequencerWidgets.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1633,6 +1693,7 @@ LastLogListing=LoadErrors
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/TopDownBP/TargetDummy/TargetDummy.TargetDummy;
 RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
 RecentlyPlaced=/Game/Geometry/Meshes/GrassMesh.GrassMesh;
 RecentlyPlaced=/Game/Geometry/Meshes/Grass.Grass;
@@ -1687,5 +1748,69 @@ PaletteThumbnailScale=0.300000
 
 [SelectionDetails]
 PreserveScaleRatio=True
+
+[WidgetTemplatesExpanded]
+Common=False
+Extra=False
+Input=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Uncategorized=False
+User Created=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+bKeyAllEnabled=False
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowFrameNumbers=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+TimeSnapIntervalMode=STSI_Custom
+CustomTimeSnapInterval=0.050000
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bLabelBrowserVisible=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bShowCurveEditorCurveToolTips=True
+bLinkCurveEditorTimeRange=False
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowViewportTransportControls=True
+bLockPlaybackToAudioClock=False
+bAllowPossessionOfPIEViewports=False
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=False
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+TrajectoryPathCap=250
 
 
