--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ Perception_C=K2Node_VariableGet.DefaultValueCategory.None,
 StructProperty=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -175,12 +175,6 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/AIAgent/GetRoamLocation.GetRoamLocation
-OpenAssetsAtExit=/Game/AIAgent/NewAITree.NewAITree
-OpenAssetsAtExit=/Game/AIAgent/GetPlayerLocation.GetPlayerLocation
-OpenAssetsAtExit=/Game/AIAgent/TestPawn.TestPawn
-OpenAssetsAtExit=/Game/AIAgent/NewController.NewController
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -1343,9 +1337,9 @@ BTAuxiliaryNode=
 BTNode=
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
 TestPawn_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-NewController_C="\"Object.Controller.Controller|Transform\" "
-AIController="\"Object.Controller.Controller|Transform\" "
-Controller="\"Object.Controller.Controller|Transform\" "
+NewController_C="\"Object.Controller.Controller"
+AIController="\"Object.Controller.Controller"
+Controller="\"Object.Controller.Controller"
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
