Changed bsp to static mesh

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -169,7 +169,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Levels
 LastLevel=/Game/Levels/BlockOut
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -616,7 +616,7 @@ DirectionalLight.Cooking=True
 DirectionalLight.Actor=True
 Brush.Surface Materials=True
 Brush.Geometry=True
-Brush.Surface Properties=False
+Brush.Surface Properties=True
 LightmassPrimitiveSettingsObject.Lightmass=True
 NavMeshBoundsVolume.TransformCommon=True
 NavMeshBoundsVolume.Navigation=True
@@ -1042,6 +1042,12 @@ FbxImportUI.Transform=True
 FbxImportUI.Miscellaneous=True
 FbxImportUI.LodSettings=True
 FbxImportUI.Material=True
+Actor.Actor=True
+GlobalLighting_C.TransformCommon=True
+GlobalLighting_C.Default=True
+GlobalLighting_C.Rendering=True
+GlobalLighting_C.Input=True
+GlobalLighting_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -1077,6 +1083,8 @@ FbxImportUI.Material=True
 /Game/Chloe/UI/Ingame.Ingame=1
 /Game/Chloe/UI/Pause_Menu.Pause_Menu=1
 /Game/Chloe/UI/Settings_Menu.Settings_Menu=1
+/Game/Base_StaticMesh.Base_StaticMesh=0
+/Game/Models/Andrew/tent_low.tent_low=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1113,8 +1121,9 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
-Brush.Geometry=False
+Brush.Geometry=True
 FbxImportUI.Mesh=True
+Brush.BrushSettings=True
 
 [RootWindow]
 ScreenPosition=X=245.000 Y=134.000
@@ -1791,12 +1800,12 @@ LastLogListing=FBXImport
 /Game/Models=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/Andrew/tent_low.tent_low;
 RecentlyPlaced=/Game/Models/Ben/cart_ben_wilkinson_10-01-19.cart_ben_wilkinson_10-01-19;
 RecentlyPlaced=/Game/Models/Chris/Cart_-_Chris_-_09-01-19.Cart_-_Chris_-_09-01-19;
 RecentlyPlaced=/Game/Models/Chris/Wheelbarrow_-_Chris_-_10-01-19__1_.Wheelbarrow_-_Chris_-_10-01-19__1_;
 RecentlyPlaced=/Game/Models/Chris/Cart_Wheel_-_Chris_-_10-09-19.Cart_Wheel_-_Chris_-_10-09-19;
 RecentlyPlaced=/Game/Models/Chris/Cart_Ground_-_Chris_-_10-09-19.Cart_Ground_-_Chris_-_10-09-19;
-RecentlyPlaced=/Game/Models/Andrew/tent_low.tent_low;
 RecentlyPlaced=/Game/Models/Aaron/bucket-aaroncrossley-09-09-19.bucket-aaroncrossley-09-09-19;
 RecentlyPlaced=/Game/Models/Ben/well_ben_wilkinson_10-01-19.well_ben_wilkinson_10-01-19;
 RecentlyPlaced=/Game/Models/Ben/cloth_cover_ben_wilkinson_10-01-19.cloth_cover_ben_wilkinson_10-01-19;
