--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -163,13 +163,13 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
 LastLevel=/Game/Levels/BlockOut
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -1144,7 +1144,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/c018840h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -1750,6 +1750,8 @@ SequencerWidgets.TimeStamp=2018.05.14-10.37.26
 SequencerWidgets.LastCompileMethod=Unknown
 SynthBenchmark.TimeStamp=2018.05.14-10.37.28
 SynthBenchmark.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2018.05.14-10.37.28
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
