--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -148,7 +148,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
 ContentBrowserTab1.HorizontalSplitter.SlotSize0=0.900000
 ContentBrowserTab1.HorizontalSplitter.SlotSize1=0.900000
-ContentBrowserTab1.ActiveTypeFilters=
+ContentBrowserTab1.ActiveTypeFilters=StaticMesh
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
@@ -1752,6 +1752,8 @@ SynthBenchmark.TimeStamp=2018.05.14-10.37.28
 SynthBenchmark.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2018.05.14-10.37.28
 StaticMeshEditor.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2018.05.14-10.37.20
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1802,14 +1804,16 @@ LastLogListing=FBXImport
 /Game/Models=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 
 [PlacementMode]
-RecentlyPlaced=/Game/Models/Andrew/tent_low.tent_low;
-RecentlyPlaced=/Game/Models/Ben/cart_ben_wilkinson_10-01-19.cart_ben_wilkinson_10-01-19;
+RecentlyPlaced=/Game/Models/Ben/pickaxe__ben_wilkinson_10-01-19.pickaxe__ben_wilkinson_10-01-19;
 RecentlyPlaced=/Game/Models/Chris/Cart_-_Chris_-_09-01-19.Cart_-_Chris_-_09-01-19;
-RecentlyPlaced=/Game/Models/Chris/Wheelbarrow_-_Chris_-_10-01-19__1_.Wheelbarrow_-_Chris_-_10-01-19__1_;
-RecentlyPlaced=/Game/Models/Chris/Cart_Wheel_-_Chris_-_10-09-19.Cart_Wheel_-_Chris_-_10-09-19;
 RecentlyPlaced=/Game/Models/Chris/Cart_Ground_-_Chris_-_10-09-19.Cart_Ground_-_Chris_-_10-09-19;
+RecentlyPlaced=/Game/Models/Chris/Wheelbarrow_-_Chris_-_10-01-19__1_.Wheelbarrow_-_Chris_-_10-01-19__1_;
+RecentlyPlaced=/Game/Models/Dylan/RopeCoil_Dylan_10-01-19__1_.RopeCoil_Dylan_10-01-19__1_;
 RecentlyPlaced=/Game/Models/Aaron/bucket-aaroncrossley-09-09-19.bucket-aaroncrossley-09-09-19;
 RecentlyPlaced=/Game/Models/Ben/well_ben_wilkinson_10-01-19.well_ben_wilkinson_10-01-19;
+RecentlyPlaced=/Game/Models/Andrew/tent_low.tent_low;
+RecentlyPlaced=/Game/Models/Ben/cart_ben_wilkinson_10-01-19.cart_ben_wilkinson_10-01-19;
+RecentlyPlaced=/Game/Models/Chris/Cart_Wheel_-_Chris_-_10-09-19.Cart_Wheel_-_Chris_-_10-09-19;
 RecentlyPlaced=/Game/Models/Ben/cloth_cover_ben_wilkinson_10-01-19.cloth_cover_ben_wilkinson_10-01-19;
 RecentlyPlaced=/Game/Models/Ben/brazier_Ben_Wilkinson_10-01-19.brazier_Ben_Wilkinson_10-01-19;
 RecentlyPlaced=/Game/Materials/Quarry_Grid_Shown.Quarry_Grid_Shown;
@@ -1820,8 +1824,6 @@ RecentlyPlaced=/Game/TopDownBP/Hud/damagetest.damagetest;
 RecentlyPlaced=/Game/TopDownBP/Hud/test.test;
 RecentlyPlaced=/Game/Geometry/Meshes/GrassMesh.GrassMesh;
 RecentlyPlaced=/Game/Geometry/Meshes/Grass.Grass;
-RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
-RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
