--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -101,7 +101,6 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=False,EnabledStats=,bShowFullToolbar=True))
 CurrentRotGridSize=0
 CameraSpeed=3
-CurrentPosGridSize=1
 
 [MRU]
 MRUItem0=/Game/Levels/BlockOut
@@ -195,7 +194,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Models/Andrew
+ContentBrowserTab1.SelectedPaths=/Game/Models/Ben
 
 [EditorStartup]
 LastLevel=/Game/Levels/BlockOut
@@ -1134,7 +1133,7 @@ ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[2]\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[8]\" \"Object.Bindings.ActionMappings.ActionMappings[10]\" \"Object.Bindings.ActionMappings.ActionMappings[11]\" "
@@ -1902,26 +1901,26 @@ LastLogListing=FBXImport
 /Game/Models=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/Ben/damaged_vase_Ben_Wilkinson_09-01-19.damaged_vase_Ben_Wilkinson_09-01-19;
+RecentlyPlaced=/Game/Models/Ben/vase_light_damage_Ben_Wilkinson_09-01-19.vase_light_damage_Ben_Wilkinson_09-01-19;
+RecentlyPlaced=/Game/Models/Ben/small_vase_Ben_Wilkinson_09-01-19.small_vase_Ben_Wilkinson_09-01-19;
+RecentlyPlaced=/Game/Models/Ben/half_vase_Ben_Wilkinson_09-01-19.half_vase_Ben_Wilkinson_09-01-19;
+RecentlyPlaced=/Game/Models/Ben/vase_undamaged_Ben_Wilkinson_09-01-19.vase_undamaged_Ben_Wilkinson_09-01-19;
+RecentlyPlaced=/Game/Models/Ben/2_handle_vase_Ben_Wilkinson_09-01-19.2_handle_vase_Ben_Wilkinson_09-01-19;
+RecentlyPlaced=/Game/Models/Ben/1_handle_vase_Ben_Wilkinson_09-01-19.1_handle_vase_Ben_Wilkinson_09-01-19;
+RecentlyPlaced=/Game/Models/Ben/pickaxe__ben_wilkinson_10-01-19.pickaxe__ben_wilkinson_10-01-19;
+RecentlyPlaced=/Game/Models/Ben/brazier_Ben_Wilkinson_10-01-19.brazier_Ben_Wilkinson_10-01-19;
 RecentlyPlaced=/Game/Models/Andrew/scaffold07-andrew-11-01-19.scaffold07-andrew-11-01-19;
+RecentlyPlaced=/Game/Models/Andrew/scaffold04-andrew-11-01-19.scaffold04-andrew-11-01-19;
+RecentlyPlaced=/Game/Models/Andrew/scaffold03-andrew-11-01-19.scaffold03-andrew-11-01-19;
 RecentlyPlaced=/Game/Models/Jack/Crystals_Tiny_Boi_1.Crystals_Tiny_Boi_1;
 RecentlyPlaced=/Game/Models/Jack/Crystals_Tiny_Boi_2.Crystals_Tiny_Boi_2;
 RecentlyPlaced=/Game/Models/Ben/cart_ben_wilkinson_10-01-19.cart_ben_wilkinson_10-01-19;
 RecentlyPlaced=/Game/Models/Andrew/scaffold09-andrew-11-01-19.scaffold09-andrew-11-01-19;
 RecentlyPlaced=/Game/Models/Dylan/ExposedCrystal_2_Dylan_10-01-19.ExposedCrystal_2_Dylan_10-01-19;
-RecentlyPlaced=/Game/Models/Ben/pickaxe__ben_wilkinson_10-01-19.pickaxe__ben_wilkinson_10-01-19;
 RecentlyPlaced=/Game/Models/Jack/Crystal_Smol_3.Crystal_Smol_3;
 RecentlyPlaced=/Game/Models/Jack/Crystal_Smol_1.Crystal_Smol_1;
 RecentlyPlaced=/Game/Models/Jack/Crystal_Smol_2.Crystal_Smol_2;
-RecentlyPlaced=/Game/Models/Jack/Crystals_Tiny_Boi_4.Crystals_Tiny_Boi_4;
-RecentlyPlaced=/Game/Models/Jack/Crystal_Tiny_Boi_2.Crystal_Tiny_Boi_2;
-RecentlyPlaced=/Game/Models/Andrew/scaffold04-andrew-11-01-19.scaffold04-andrew-11-01-19;
-RecentlyPlaced=/Game/Models/Jack/Crystal_Realistic_2.Crystal_Realistic_2;
-RecentlyPlaced=/Game/Models/Jack/Crystal_realistic_1.Crystal_realistic_1;
-RecentlyPlaced=/Game/Models/Ben/brazier_Ben_Wilkinson_10-01-19.brazier_Ben_Wilkinson_10-01-19;
-RecentlyPlaced=/Game/Models/Chris/Wheelbarrow_-_Chris_-_10-01-19__1_.Wheelbarrow_-_Chris_-_10-01-19__1_;
-RecentlyPlaced=/Game/Models/Chris/Cart_-_Chris_-_09-01-19.Cart_-_Chris_-_09-01-19;
-RecentlyPlaced=/Game/Materials/SandstoneMat_Dark.SandstoneMat_Dark;
-RecentlyPlaced=/Game/Materials/SandstoneMat.SandstoneMat;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
