Random direction for text

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -169,7 +169,9 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/TopDownBP/TargetDummy/DamageText.DamageText
+OpenAssetsAtExit=/Game/TopDownBP/TargetDummy/TargetDummy.TargetDummy
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -997,7 +999,7 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Render Transform.RenderTransform\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 PrimitiveComponent=
@@ -1012,12 +1014,12 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 SizeBox="\"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Render Transform.RenderTransform\" "
-TextBlock="\"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object.Render Transform.RenderTransform\" "
-DamageText_C="\"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object.Render Transform.RenderTransform\" "
+Widget=
+Visual=
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+DamageText_C=
+UserWidget=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -1686,7 +1688,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -1812,5 +1814,8 @@ bRerunConstructionScripts=False
 bShowDebugVisualization=False
 bVisualizePreAndPostRoll=True
 TrajectoryPathCap=250
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
 
